--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "angular": "^1.5.8",
+    "angular-route": "^1.5.8",
     "bootstrap": "^3.3.7",
     "momentjs": "^1.1.15",
     "typescript": "^1.8.10",
