--- a/client/package.json
+++ b/client/package.json
@@ -13,14 +13,24 @@
     "angular": "^1.5.8",
     "angular-route": "^1.5.8",
     "bootstrap": "^3.3.7",
+    "bootstrap-webpack": "0.0.5",
+    "exports-loader": "^0.6.3",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
+    "imports-loader": "^0.6.5",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
     "momentjs": "^1.1.15",
     "typescript": "^1.8.10",
     "typings": "^1.3.3",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.2"
   },
   "devDependencies": {
     "css-loader": "^0.25.0",
+    "expose-loader": "^0.7.1",
     "html-loader": "^0.4.3",
+    "jquery": "^3.1.0",
     "raw-loader": "^0.5.1",
     "style-loader": "^0.13.1",
     "ts-loader": "^0.8.2",
